--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,7 +1,14 @@
 github_users:
-  - liushuai26
+  - torvalds
+  - alshedivat
 
 repo_description_lines_max: 2
 
 github_repos:
-  - bilibili/LastOrder-Dota2
+  - alshedivat/al-folio
+  - jekyll/jekyll
+  - twbs/bootstrap
+  - jquery/jquery
+  - FortAwesome/Font-Awesome
+  - mathjax/MathJax
+  - jpswalsh/academicons
