--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ wikidata_id: # your wikidata id
 wikipedia_id: # your wikipedia id (Case sensitive)
 work_url: # work page URL
 x_username: # your X handle
-youtube_id: shihao sun # your youtube channel id (youtube.com/@<youtube_id>)
+youtube_id: xOWra3pYS8Y-er3pHugJPA # your youtube channel id (youtube.com/@<youtube_id>)
 zotero_username: # your zotero username
 
 contact_note: >
